# macro_pub

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml  publish.yaml
examples/: attributes_work.rs
src/: lib.rs
